# oh-cool

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  star.rs
