[package]
name = "oh-cool"
version = "0.1.0"
authors = ["david.maceachern.tech@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hubcaps = "0.6"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros"] }